@@ -1999,6 +1999,221 @@
             },
          ],
       },
+      {  base_value => '1000',
+         name       => 'MySQL Transaction Handler',
+         hash       => 'hash_00_VER_fedb045b14bdf8272ac0655a1059cb82',
+         dt         => {
+            hash  => 'hash_01_VER_2227a4794731fe2fa387cc096c39e514',
+            input => 'Get MySQL Stats',
+            Handler_commit => {
+               data_source_type_id => '2',
+               hash => 'hash_08_VER_7e7fad9a6481fc3d92c088d62899892f',
+            },
+            Handler_rollback => {
+               data_source_type_id => '2',
+               hash => 'hash_08_VER_3f5d445e7498402b46163527830eecae',
+            },
+            Handler_savepoint => {
+               data_source_type_id => '2',
+               hash => 'hash_08_VER_66125ea03534f65a210ffccb18d2f6dc',
+            },
+            Handler_savepoint_rollback => {
+               data_source_type_id => '1',
+               hash => 'hash_08_VER_da38247d3f2dbd6491fa84b1bd56c8ea',
+            },
+         },
+         items => [
+            {  color  => 'DE0056',
+               hashes => [
+                  'hash_10_VER_a0d6308fd5387a54653b212439fd9c7f',
+                  'hash_10_VER_9ab915226c64de24a54e1373bd59b998',
+                  'hash_10_VER_ed0b172c7db9eed8e93cc94fada83986',
+                  'hash_10_VER_a75e34678335c6666cb4feaa5a0d3ef5',
+               ],
+               item => 'Handler_commit',
+               task => 'hash_09_VER_fa5343558f61fdb424f4a99df76eb995',
+               type => 'LINE1',
+            },
+            {  color  => '784890',
+               hashes => [
+                  'hash_10_VER_a31c3a6d65ba6d5e5a3afb4bf39765d8',
+                  'hash_10_VER_b175d317caa4288fb2d48979efae75e4',
+                  'hash_10_VER_004993f0ce626c6e507ddd57667aef79',
+                  'hash_10_VER_23bf99e1e8698ce73f414945f017fa01',
+               ],
+               item => 'Handler_rollback',
+               task => 'hash_09_VER_9452710b16eed998ea80fb1b189202f3',
+               type => 'LINE1',
+            },
+            {  color  => 'D1642E',
+               hashes => [
+                  'hash_10_VER_8cfe28a9423369260d0078c710c417a9',
+                  'hash_10_VER_d5354f604591f333bb8af2191998eb76',
+                  'hash_10_VER_c663d92dc8607c4e752599f1329c7017',
+                  'hash_10_VER_802bcd10b066743e871e1d7a96bacd12',
+               ],
+               item => 'Handler_savepoint',
+               task => 'hash_09_VER_9e4dd1d0f5b9069a5b91f1dc04dbd5bc',
+               type => 'LINE1',
+            },
+            {  color  => '487860',
+               hashes => [
+                  'hash_10_VER_f22038a4fed6ff65452f98addfe71637',
+                  'hash_10_VER_932ad5a8af70ec83a5f1dbf8228c4c35',
+                  'hash_10_VER_05c5c84cc6597009600a1e9cf94d3ac8',
+                  'hash_10_VER_6e0e8e688d0c3f0a810aa17540bf4434',
+               ],
+               item => 'Handler_savepoint_rollback',
+               task => 'hash_09_VER_0975e307cd53027ea0ce359925c531b5',
+               type => 'LINE1',
+            },
+         ],
+      },
+      {  base_value => '1000',
+         name       => 'MySQL Handlers',
+         hash       => 'hash_00_VER_d821b654d545b20e3c74bc1ac6c02398',
+         dt         => {
+            hash  => 'hash_01_VER_50c34827f19eba780d2f1333bdfa85b4',
+            input => 'Get MySQL Stats',
+            Handler_write => {
+               data_source_type_id => '2',
+               hash => 'hash_08_VER_8f5a845776c2a5f6919dddb3568a888e',
+            },
+            Handler_update => {
+               data_source_type_id => '2',
+               hash => 'hash_08_VER_43ce1f5b5037c2ed2248701375f60b52',
+            },
+            Handler_delete                  => {
+               data_source_type_id => '2',
+               hash => 'hash_08_VER_3d4ae5e57097e4d4fb2df7b87fc21386',
+            },
+            Handler_read_first        => {
+               data_source_type_id => '2',
+               hash => 'hash_08_VER_9d7ed56c6442f3da58f2c04509786bc2',
+            },
+            Handler_read_key                 => {
+               data_source_type_id => '2',
+               hash => 'hash_08_VER_98ddc8ca88ead8ba056d7479df92a64c',
+            },
+            Handler_read_next               => {
+               data_source_type_id => '2',
+               hash => 'hash_08_VER_d1e9cd45a9a5bdb9695a816d0422d469',
+            },
+            Handler_read_prev                => {
+               data_source_type_id => '2',
+               hash => 'hash_08_VER_b7b81cd4e433f02bf8579f910377e94e',
+            },
+            Handler_read_rnd            => {
+               data_source_type_id => '2',
+               hash => 'hash_08_VER_d4ce6e9298605da94efdea368148544a',
+            },
+            Handler_read_rnd_next     => {
+               data_source_type_id => '2',
+               hash => 'hash_08_VER_f0c6936a50af8f0c5c7bdee7e59ff902',
+            },
+         },
+         items => [
+            {  color  => '4D4A47',
+               hashes => [
+                  'hash_10_VER_2f3b82eca899a2d798c351715b0a73bb',
+                  'hash_10_VER_44efe367ec987847cae2e44f63fc9e2d',
+                  'hash_10_VER_0aa3b8bf59de28c3f26f6e131164c79b',
+                  'hash_10_VER_395cad31336f7c20c42f96edeba6a0ed',
+               ],
+               item => 'Handler_write',
+               task => 'hash_09_VER_045d98b495e18714da9eb946fc25ad53',
+               type => 'AREA',
+            },
+            {  color  => 'C79F71',
+               hashes => [
+                  'hash_10_VER_c3e36343135c4a9537acd15d23ae4491',
+                  'hash_10_VER_16908eb047f2db8c2c85fbf233cb4c6f',
+                  'hash_10_VER_7529d36af9e6ca08cea6845086d91483',
+                  'hash_10_VER_1179ba39d450ad09e1f16fc343f2c370',
+               ],
+               item => 'Handler_update',
+               task => 'hash_09_VER_dc7e2eaa7625733836310b83e786404b',
+               type => 'STACK',
+            },
+            {  color  => 'BDB8B3',
+               hashes => [
+                  'hash_10_VER_4aefd45b2ca5aa903a76754c3f091616',
+                  'hash_10_VER_8d526c0914ee78f36af74ecb691b0d32',
+                  'hash_10_VER_2e57eddeb93ad45d94a461dd9184cb1f',
+                  'hash_10_VER_95e1c9a1d758878b889c7973ec70526b',
+               ],
+               item => 'Handler_delete',
+               task => 'hash_09_VER_96efc35808f24b528708c355ed71df1f',
+               type => 'STACK',
+            },
+            {  color  => '8C286E',
+               hashes => [
+                  'hash_10_VER_cc432e2b88b1092c8c299123f7a39c34',
+                  'hash_10_VER_0c11c5a8d02d9654a187be7d9c95608f',
+                  'hash_10_VER_d2f951f9036b66e3f96a3a5bd5dc94b1',
+                  'hash_10_VER_a53abbc97fd289d27dd818b01b8442ca',
+               ],
+               item => 'Handler_read_first',
+               task => 'hash_09_VER_730eb3a30643b486cd129b0b7c00143f',
+               type => 'STACK',
+            },
+            {  color  => 'BAB27F',
+               hashes => [
+                  'hash_10_VER_822f8b8d593037f40e7b78ebc7956033',
+                  'hash_10_VER_3f8a67d26a8a428552abc8b20bb25609',
+                  'hash_10_VER_e770a47d99bdd5c034438149e41e0cba',
+                  'hash_10_VER_7e36c221ad2adff08bde11a966961df0',
+               ],
+               item => 'Handler_read_key',
+               task => 'hash_09_VER_bece028a0aa99c2678a75aba5baaf5b4',
+               type => 'STACK',
+            },
+            {  color  => 'C02942',
+               hashes => [
+                  'hash_10_VER_8a1a540ae4277ecdbf28840c90f174cb',
+                  'hash_10_VER_73b50c32caa2ce49974f8a4c5d85c1c7',
+                  'hash_10_VER_d126b879ae83877b5cf7938c52b3851b',
+                  'hash_10_VER_93efd62d913c2e1e17876cbf9b017953',
+               ],
+               item => 'Handler_read_next',
+               task => 'hash_09_VER_64e86b60a3fbdd6446784715c9eef548',
+               type => 'STACK',
+            },
+            {  color  => 'FA6900',
+               hashes => [
+                  'hash_10_VER_75b3a4893c79ecbe714afa4ee85109eb',
+                  'hash_10_VER_54887db14f8078ca029841c343579f32',
+                  'hash_10_VER_71bfac99073e0ed9acfa4edfe0dbe44b',
+                  'hash_10_VER_3184eb2aad7890a485ac36ec0650390e',
+               ],
+               item => 'Handler_read_prev',
+               task => 'hash_09_VER_5beed8b8d4b398d23974fb7eb3f5e1d1',
+               type => 'STACK',
+            },
+            {  color  => '5A3D31',
+               hashes => [
+                  'hash_10_VER_5480c58191fed36ffa0790fb0c8fb590',
+                  'hash_10_VER_e32fde6412e828ea258a0c10763a4dc9',
+                  'hash_10_VER_217f195626c6439921bb8a74a8b4974a',
+                  'hash_10_VER_cc2be38e50259bb623ecfcd5ee207ea4',
+               ],
+               item => 'Handler_read_rnd',
+               task => 'hash_09_VER_e0baafd2173807bf5436e599067d6189',
+               type => 'STACK',
+            },
+            {  color  => '69D2E7',
+               hashes => [
+                  'hash_10_VER_f5d1d89f25f5091745f6494bc2ee237a',
+                  'hash_10_VER_c31b04a0275a02837d12d1669f97eedb',
+                  'hash_10_VER_d75b4a16e74c8ca9bc4fe3c93669953e',
+                  'hash_10_VER_9c6e4a16fee8b34ec64469a3994c63bc',
+               ],
+               item => 'Handler_read_rnd_next',
+               task => 'hash_09_VER_0bf0fe14c6917b966aba10b03b08e0aa',
+               type => 'STACK',
+            },
+         ],
+      },
    ],
    inputs => {
       'Get MySQL Stats' => {
@@ -2184,6 +2399,21 @@
             State_writing_to_net       => 'hash_07_VER_c3d4dd8ee7af85bc893eaa828acba796',
             State_none                 => 'hash_07_VER_f5a6ed7e86aefe1908473f0c330cb58a',
             State_other                => 'hash_07_VER_0776c8e20eb4f8890dbba7c975556065',
+            Handler_commit             => 'hash_07_VER_c4e247c203b21a903a01143d00e71355',
+            Handler_delete             => 'hash_07_VER_69b53100ab3f422fc71ec9bc12edd9d5',
+            Handler_discover           => 'hash_07_VER_f41b3252da6ebf3f610d59420839a67a',
+            Handler_prepare            => 'hash_07_VER_c26970e863d6bc7d5473643071e8ae59',
+            Handler_read_first         => 'hash_07_VER_b53736a071099a8e10fe4ae46f458b4f',
+            Handler_read_key           => 'hash_07_VER_b1e0a675076a4c4e515a7036dfd5462a',
+            Handler_read_next          => 'hash_07_VER_d0e627dd8f65dbde02269c4f17546cbe',
+            Handler_read_prev          => 'hash_07_VER_4fc6a489d571f347c59bc1afb6dee9f4',
+            Handler_read_rnd           => 'hash_07_VER_4dd2caa030ae3bf2023313bd10ea459f',
+            Handler_read_rnd_next      => 'hash_07_VER_0d6449be9ed1b6c759d767d73fe0d43f',
+            Handler_rollback           => 'hash_07_VER_e7e151b9c506afc6d7fd9bf818c0f8fd',
+            Handler_savepoint          => 'hash_07_VER_e903bbf5b08e424826ade17616d15c1a',
+            Handler_savepoint_rollback => 'hash_07_VER_39c9a089710491f11657e539871a0a03',
+            Handler_update             => 'hash_07_VER_caf52403e3a995055a9a00c816672961',
+            Handler_write              => 'hash_07_VER_a4e778068227762dc88415e34455cec0',
          },
          type_id => 1
       },
