@@ -1,6 +1,7 @@
 Changes for templates:
 
-	* Config files can be used instead of editing the .php file (issue 39)
+	* Added Handler_ graphs (issue 47).
+	* Config files can be used instead of editing the .php file (issue 39).
 	* binary log space is now calculated without a MySQL query (issue 48).
 	* There was no easy way to force inputs to be filled (issue 45).
 	* Some graphs were partially hidden without --lower-limit (issue 43).
